# ml-ultrasonic-flaw-detection-ecndt2026

./: .gitignore  README.md  REPRODUCING.md  pyproject.toml  requirements.txt
data/configs/: inspection_info.json
scripts/: 0_dataset_visualization.py  1_convert_m2k_to_df.py  2_anotate_df.py  3_feature_engineering.py  4_training.py  5_test.py  5_threshold_guess.py  6_plotting.py  6_test.py  7_plotting_sscan.py  9_extended_abstract_figure.py  classification_manual_analysis.py  fig1c_sscan_annotations.py  fig3b_sscan_guess.py  inspection_info.json  m2k_inspection_tool.py  plot_roboflow_anotation_coco.py  results_20251016_201733.txt  sscan_to_png.py  utils.py
scripts/dataset_creation/: active_dir_resolution.py  merge_df.py  passive_dir_resolution.py  static_rbh.py
