[project]
name = "ml-ultrasonic-flaw-detection-ecndt2026"
version = "0.1.0"
description = "."
authors = [
    { name = "Thiago E. Kalid", email = "thiagokkalid@gmail.com" },
]
license = { file = "MIT" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "scikit-learn",
    "seaborn",
    "numpy",
    "matplotlib",
    "pyod",
    "tqdm",
    "pandas",
    "mini-auspex",
    "joblib",
    "PyWavelets"
]
